--- a/src/Pages/Builder/Builder.module.scss
+++ b/src/Pages/Builder/Builder.module.scss
@@ -1,7 +1,50 @@
-.builder{
+.builderIntroduction{
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.builder{
+	height: 100vh;
+	width: 100vw;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-template-rows: auto 1fr;
+	grid-template-areas: "close details""toolbar page";
+	grid-gap: var(--spacing-md);
+	padding: var(--spacing-md);
+	box-sizing: border-box;
+
+	.toolbar,.close{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: var(--colour-chalk);
+	}
+
+	.details{
+		grid-area: details;
+		height: 80px;
+		display: flex;
+		align-items: center;
+	}
+	.toolbar{
+		grid-area: toolbar;
+		width: 60px;
+	}
+	.page{
+		grid-area: page;
+		background-color: var(--colour-chalk);
+	}
+	.close{
+		grid-area: close;
+		background-color: initial;
+
+		.icon{
+			display:block;
+			cursor: pointer;
+		}
+	}
 }
