--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -2,8 +2,7 @@
 	display:flex;
 	align-items: center;
 	justify-content: center;
-	min-height: 100vh;
-	min-width: 100vw;
+	height: 100%;
 
 	.buttons{
 		padding: var(--spacing-md) 0;
