Fix some events/styling for mobile

--- a/src/Pages/Builder/Builder.module.scss
+++ b/src/Pages/Builder/Builder.module.scss
@@ -34,6 +34,7 @@
 		grid-template-areas: "details details""toolbar page";
 		padding: 0;
 		grid-gap: var(--spacing-sm);
+		overflow: hidden;
 
 		.details{
 			height: auto;
