--- a/src/Atoms/VerticalPeeker/VerticalPeeker.module.scss
+++ b/src/Atoms/VerticalPeeker/VerticalPeeker.module.scss
@@ -1,23 +1,25 @@
 .verticalPeeker{
 	height: 100%;
-	border-right: 1px solid var(--colour-muted);
+	border: 1px solid var(--colour-muted);
 	display: grid;
 	grid-template-columns: 1fr 22px;
 	grid-template-areas: "content puller";
+	box-sizing: border-box;
 
 	.puller{
+		background-color: var(--colour-white);
 		grid-area: puller;
 		position: relative;
 		height: 100%;
 		width: 100%;
 		display: flex;
 		align-items: center;
-		transition: background-color 0.3s ease-out;
+		box-shadow: 4px 0px 3px 2px rgba(0,0,0,0.05);
 
 		.text{
 			user-select: none;
-			border: 1px solid var(--colour-muted);
-			background-color: var(--colour-chalk);
+			border-left: 1px solid var(--colour-muted);
+			background-color: var(--colour-white);
 			padding: 200px 5px;
 			border-radius: var(--border-radius-lg);
 			writing-mode: vertical-lr;
@@ -25,6 +27,7 @@
 			transform: rotate(180deg);
 			cursor: pointer;
 			transition: background-color 0.3s ease-out;
+			box-shadow: -4px 0px 3px 2px rgba(0,0,0,0.05);
 		}
 	}
 	.content{
@@ -32,6 +35,7 @@
 		width: 0;
 		transition: all 0.3s ease-out;
 		overflow: hidden;
+		background-color: var(--colour-white);
 	}
 
 	&.closed{
@@ -42,10 +46,7 @@
 
 	&.open{
 		.puller{
-			background-color: var(--colour-white);
-
 			.text{
-				background-color: var(--colour-white);
 				border-right: 0;
 				border-bottom: 0;
 				border-top: 0;
@@ -53,7 +54,7 @@
 		}
 		.content{
 			width: 300px;
-			background-color: var(--colour-white);
+
 		}
 	}
 
