--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,6 +8,8 @@
 	--colour-chalk: #F7F7F7;
 	--colour-muted: #9B9B9B;
 
+	--colour-box-shadow: rgba(0,0,0,0.05);
+
 	--spacing-xs: 0.25rem;
 	--spacing-sm: 0.5rem;
 	--spacing-md: 1rem;
