--- a/src/Atoms/VerticalPeeker/VerticalPeeker.module.scss
+++ b/src/Atoms/VerticalPeeker/VerticalPeeker.module.scss
@@ -14,7 +14,7 @@
 		width: 100%;
 		display: flex;
 		align-items: center;
-		box-shadow: 4px 0px 3px 2px rgba(0,0,0,0.05);
+		box-shadow: 4px 0px 3px 2px var(--colour-box-shadow);
 
 		.text{
 			user-select: none;
@@ -26,8 +26,7 @@
 			text-orientation: sideways;
 			transform: rotate(180deg);
 			cursor: pointer;
-			transition: background-color 0.3s ease-out;
-			box-shadow: -4px 0px 3px 2px rgba(0,0,0,0.05);
+			box-shadow: -4px 0px 3px 2px var(--colour-box-shadow);
 		}
 	}
 	.content{
