--- a/src/Molecules/PageBrowser/PageBrowser.module.scss
+++ b/src/Molecules/PageBrowser/PageBrowser.module.scss
@@ -1,4 +1,48 @@
 .pageBrowser{
-	width: 300px;
 	padding: var(--spacing-sm);
+	box-sizing: border-box;
+	height: 100%;
+	width: 300px;
+
+	.actions{
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		border-bottom: 1px solid var(--colour-muted);
+		padding-bottom: var(--spacing-sm);
+		margin-bottom: var(--spacing-sm);
+
+		.action{
+			color: var(--colour-muted);
+
+			&:hover{
+				color: var(--colour-basalt);
+				cursor: pointer;
+			}
+
+			.icon{
+				display: block;
+			}
+		}
+	}
+
+	.noPages{
+		height: 100%;
+		display: flex;
+		align-items: center;
+		color: var(--colour-muted);
+		justify-content: center;
+
+		> div{
+			max-width: 200px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+	}
+
+	@media screen and (max-width: 768px) {
+		width: 210px;
+	}
 }
