Add some form of basic blockwriting tool

--- a/src/Molecules/PageBrowser/PageBrowser.module.scss
+++ b/src/Molecules/PageBrowser/PageBrowser.module.scss
@@ -42,6 +42,28 @@
 		}
 	}
 
+	.pages{
+		.page{
+			font-weight: var(--font-weight-light);
+			border-left: 5px solid var(--colour-paper);
+			cursor: pointer;
+			padding: 0 5px;
+			display: flex;
+
+			&.active{
+				font-weight: var(--font-weight-bold);
+			}
+
+			&:hover{
+				background-color: var(--colour-paper);
+			}
+
+			.icon{
+
+			}
+		}
+	}
+
 	@media screen and (max-width: 768px) {
 		width: 210px;
 	}
