--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -31,6 +31,11 @@ html{
 	height: -moz-available;
 	height: -webkit-fill-available;
 	height: fill-available;
+
+	width: 100vw;
+	width: -moz-available;
+	width: -webkit-fill-available;
+	width: fill-available;
 }
 
 body{
@@ -38,7 +43,12 @@ body{
 	height: -moz-available;
 	height: -webkit-fill-available;
 	height: fill-available;
+
 	width: 100vw;
+	width: -moz-available;
+	width: -webkit-fill-available;
+	width: fill-available;
+
 	box-sizing: border-box;
 	font-size: 20px;
 	font-family: 'Source Serif Pro', serif;
