--- a/src/Pages/Builder/PageManager/PageManager.module.scss
+++ b/src/Pages/Builder/PageManager/PageManager.module.scss
@@ -3,4 +3,8 @@
 	height: 100%;
 	padding-left: var(--spacing-xl);
 	box-sizing: border-box;
+
+	@media screen and (max-width: 768px) {
+		padding-left: var(--spacing-lg);
+	}
 }
