--- a/src/assets/codemirror.scss
+++ b/src/assets/codemirror.scss
@@ -10,6 +10,12 @@
 	// background-color: var(--colour-chalk)!important;
 }
 
+.ͼ1 .cm-line{
+	padding: 0;
+	line-height: 1.5rem;
+	font-size: 20px;
+}
+
 
 ul{
 	list-style: initial;
