--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -7,9 +7,11 @@
 	--colour-basalt: #212121;
 	--colour-chalk: #F7F7F7;
 	--colour-muted: #9B9B9B;
+	--colour-lancing: #5397BC;
 
 	--colour-box-shadow: rgba(0,0,0,0.05);
 
+	--spacing-xxs: 0.1rem;
 	--spacing-xs: 0.25rem;
 	--spacing-sm: 0.5rem;
 	--spacing-md: 1rem;
